# vai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  UBIQUITOUS_LANGUAGE.md  docker-compose.yml  fly.toml  install.sh  rust-toolchain.toml  vai.toml
.cargo/: audit.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish-worker-image.yml  release.yml
.sandcastle/: Dockerfile  prompt.md
contrib/: vai.service
dashboard/: .env.example  app.config.ts  package.json  tsconfig.json
dashboard/app/: client.tsx  ssr.tsx
docker/worker/: Dockerfile  claude-log-filter.py  loop.sh  test_loop.sh
docs/: agent-cli.md  deployment-security.md  server-auth-audit.md  worker-smoke-test.md
docs/postmortems/: 2026-04-20-vai-dashboard-delta-wipe.md
docs/prds/: 00-overview.md  01-phase1-foundation.md  02-phase2-coordination.md  03-phase3-issue-system.md  04-phase4-intelligence.md  05-cli-api-parity.md  06-remote-config.md  07-typescript-language-support.md  08-server-deployment.md  09-storage-abstraction.md  10-rbac-and-auth.md  11-realtime-events-postgres.md  12-local-to-remote-migration.md  13-security.md  13-server-mode-storage-purity.md  14-performance-efficiency.md  14-remaining-work-summary.md  15-issue-system-improvements.md  15-server-mode-storage-purity.md  16-binary-split-feature-flags.md  16-remaining-work-summary.md  17-hosting-and-deployment.md  17-issue-system-improvements.md  18-auth-token-exchange.md  18-binary-split-feature-flags.md  19-org-system-consolidation.md  20-agent-cli.md  21-pagination.md  22-comment-improvements.md  23-ralph-loop-improvements.md  24-codebase-refactor.md  25-stateless-server.md  26-user-onboarding-test-plan.md  26-user-onboarding.md  27-user-table-unification.md  28-cloud-agent-runtime.md  29-cloud-agent-observability.md  XX-performance-efficiency.md  XX-security.md
infra/: DEPLOY.md  Dockerfile.dashboard  Dockerfile.server  README.md  docker-compose.yml  fly.toml
infra/configs/: server.toml.example
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
migrations/: 20260323000001_initial_schema.sql  20260323000002_rbac_schema.sql  20260323000003_file_index.sql  20260324000001_idempotent_migration.sql  20260326000001_issue_dependencies.sql  20260326000002_issue_comments.sql  20260326000003_acceptance_criteria.sql  20260326000004_issue_links.sql  20260327000001_workspace_deleted_paths.sql  20260327000002_migration_state.sql  20260327000003_depends_on_to_blocks.sql  20260327000004_comment_author_type.sql  20260327000005_issue_attachments.sql  20260327000006_watchers.sql  20260328000001_escalation_conflicts.sql  20260401000001_refresh_tokens.sql  20260401000002_api_key_agent_type_expires.sql  20260401000003_drop_refresh_tokens_user_fk.sql  20260401000004_better_auth_user_bridge.sql  20260401000005_restore_refresh_tokens_user_fk.sql  20260403000001_normalize_issue_status_priority.sql  20260405000001_comment_threading.sql  20260405000002_comment_mentions.sql  20260417000001_cli_device_codes.sql  20260420000001_user_onboarding.sql  20260423000000_drop_better_auth_id.sql  20260423000001_user_onboarding_uuid.sql  20260424000001_cloud_agent_runtime.sql  20260424000002_api_key_upsert.sql  20260424000003_fix_issue_status_resolution_mismatch.sql  20260425000001_personal_orgs.sql
scripts/: ralph.sh  release.sh
src/: clone.rs  credentials.rs  defaults.rs  ignore_rules.rs  lib.rs  main.rs  merge_fs.rs  pull.rs  push.rs  remote_client.rs  remote_diff.rs  remote_workspace.rs  repo.rs  status.rs  sync.rs
src/agent/: mod.rs
src/auth/: jwt.rs  mod.rs
src/cli/: agent_cmd.rs  dashboard.rs  escalation.rs  graph.rs  init.rs  issue.rs  login.rs  merge.rs  (+6 more)
tests/: concurrency.rs  dashboard_server.rs  e2e_intelligent_workflow.rs  e2e_issue_lifecycle.rs  e2e_multi_agent.rs  e2e_workspace_and_graph.rs  fs_leak_check.rs  input_validation.rs  issue_cli.rs  issue_workspace.rs  migration_integration.rs  phase1_e2e.rs  phase2_e2e.rs  phase3_e2e.rs  phase3_issue_cli.rs  phase3_issue_workspace.rs  phase4_dashboard_server.rs  phase4_e2e.rs  phase4_watcher.rs  postgres_storage.rs  remote_client_retry.rs  server_postgres_e2e.rs  templates_rendering.rs  typescript_parsing.rs  watcher.rs
(+93 files in other folders)
